top-nav, floral framing, vote icon, opacity fix for a11y readability

--- a/site/web/app/themes/harper/resources/assets/styles/_app.scss
+++ b/site/web/app/themes/harper/resources/assets/styles/_app.scss
@@ -8,7 +8,30 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: bottom;
+}
+
+.wildflower {
+  background: url('../images/svg/wildflower.svg');
+  padding: 0;
+  margin: 0;
+  background-repeat: repeat-x;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
+  background-position: 50% 115%;
+  background-attachment: fixed;
   border: 10px solid black;
+}
+
+.bg__screen {
+  background: rgba(252, 255, 252, 0.95);
+}
+
+.nav-title {
+  padding-top: 0;
+  font-family: $peace;
 }
 
 .bg__no {
@@ -25,12 +48,20 @@ body {
   background-position: 90% 10%;
 }
 
-.bg__screen {
-  background: rgba(252, 255, 255, 0.8);
-}
-
 .bg__dotted {
   background: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI1IiBoZWlnaHQ9IjUiPgo8cmVjdCB3aWR0aD0iNSIgaGVpZ2h0PSI1IiBmaWxsPSIjZmZmIj48L3JlY3Q+CjxyZWN0IHdpZHRoPSIxIiBoZWlnaHQ9IjEiIGZpbGw9IiNjY2MiPjwvcmVjdD4KPC9zdmc+");
+}
+
+.brand {
+  font-size: 5rem;
+
+  @media screen and (min-width: $bm) and (max-width: $bl) {
+    font-size: 6rem !important;
+  }
+
+  @media screen and (min-width: $bl) {
+    font-size: 10rem !important;
+  }
 }
 
 .blobber {
@@ -51,9 +82,6 @@ body {
 
 .peace {
   font-family: $peace;
-  font-size: 2rem;
-
-  @extend .black-90;
 }
 
 .f-giga {
