--- a/site/web/app/themes/harper/resources/assets/styles/_var.scss
+++ b/site/web/app/themes/harper/resources/assets/styles/_var.scss
@@ -142,3 +142,5 @@ $washed-red: #ffdfdf !default;
 $breakpoint-not-small: 'screen and (min-width: 30em)' !default;
 $breakpoint-medium: 'screen and (min-width: 30em) and (max-width: 60em)' !default;
 $breakpoint-large: 'screen and (min-width: 60em)' !default;
+$bl: 60em;
+$bm: 30em;
